# autopilot_msgs

./: CMakeLists.txt  README.md  package.xml
action/: CartesianArea.action  CartesianGoal.action  CartesianPath.action  CartesianWaypoints.action  GPSGoal.action  GPSPath.action  GPSWaypoints.action
msg/: AutopilotGeoPath.msg  AutopilotGeoPoseStamped.msg  AutopilotPath.msg  AutopilotPoseStamped.msg  NavSatFixPath.msg
srv/: AddGPSWaypoint.srv  CallOSRMService.srv  CallOpenRouteService.srv  ModifyCartesianWaypoint.srv  ModifyGPSWaypoint.srv  ModifyWaypoint.srv
